[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "setuptools-scm>=7",
]

[project]
name = "CHSPy"
dynamic = ["version"]
description = "Cubic Hermite splines"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Gerrit Ansmann", email = "gansmann@uni-bonn.de" },
]
requires-python = ">=3.6"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = [
    "symengine"
]

[project.urls]
Documentation = "https://chspy.readthedocs.io"
Homepage = "https://github.com/neurophysik/CHSPy"

[tool.setuptools.packages.find]
include = [
    "chspy*",
]

[tool.setuptools_scm]
version_file = "chspy/version.py"
